Reorganized network functions into classes

--- a/ui/gui.ui
+++ b/ui/gui.ui
@@ -6,12 +6,22 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>515</width>
-    <height>334</height>
+    <width>636</width>
+    <height>372</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Scan My LAN</string>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="../resources/scanmylan_resources.qrc">
+    <normaloff>:/icons/icons/atom_colours.svg</normaloff>:/icons/icons/atom_colours.svg</iconset>
+  </property>
+  <property name="styleSheet">
+   <string notr="true"/>
+  </property>
+  <property name="toolButtonStyle">
+   <enum>Qt::ToolButtonIconOnly</enum>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
@@ -26,22 +36,52 @@
       <property name="frameShadow">
        <enum>QFrame::Raised</enum>
       </property>
-      <layout class="QGridLayout" name="gridLayout_2">
-       <item row="0" column="2">
+      <layout class="QHBoxLayout" name="horizontalLayout_2">
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <widget class="QPushButton" name="scan_button">
+           <property name="text">
+            <string>Scan</string>
+           </property>
+           <property name="icon">
+            <iconset resource="../resources/scanmylan_resources.qrc">
+             <normaloff>:/icons/icons/play.svg</normaloff>:/icons/icons/play.svg</iconset>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="stop_button">
+           <property name="text">
+            <string>Stop</string>
+           </property>
+           <property name="icon">
+            <iconset resource="../resources/scanmylan_resources.qrc">
+             <normaloff>:/icons/icons/stop.svg</normaloff>:/icons/icons/stop.svg</iconset>
+           </property>
+          </widget>
+         </item>
+         <item>
+          <widget class="QPushButton" name="passive_button">
+           <property name="text">
+            <string>Passive</string>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
         <widget class="QPushButton" name="debug_button">
          <property name="text">
           <string>Debug</string>
          </property>
-        </widget>
-       </item>
-       <item row="0" column="0">
-        <widget class="QPushButton" name="scan_button">
-         <property name="text">
-          <string>Scan</string>
+         <property name="icon">
+          <iconset>
+           <normaloff>:/icons/question.svg</normaloff>:/icons/question.svg</iconset>
          </property>
         </widget>
        </item>
-       <item row="0" column="3">
+       <item>
         <spacer name="horizontalSpacer">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
@@ -54,15 +94,8 @@
          </property>
         </spacer>
        </item>
-       <item row="0" column="4">
+       <item>
         <widget class="QComboBox" name="interface_box"/>
-       </item>
-       <item row="0" column="1">
-        <widget class="QPushButton" name="stop_button">
-         <property name="text">
-          <string>Stop</string>
-         </property>
-        </widget>
        </item>
       </layout>
      </widget>
@@ -74,17 +107,30 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>515</width>
+     <width>636</width>
      <height>21</height>
     </rect>
    </property>
-   <widget class="QMenu" name="menuFile">
+   <widget class="QMenu" name="menu_file">
     <property name="title">
      <string>Fi&amp;le</string>
     </property>
     <addaction name="actionSave"/>
    </widget>
-   <addaction name="menuFile"/>
+   <widget class="QMenu" name="menu_options">
+    <property name="title">
+     <string>Options</string>
+    </property>
+   </widget>
+   <widget class="QMenu" name="menu_help">
+    <property name="title">
+     <string>Help</string>
+    </property>
+    <addaction name="actionAbout"/>
+   </widget>
+   <addaction name="menu_file"/>
+   <addaction name="menu_options"/>
+   <addaction name="menu_help"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
   <action name="action_start">
@@ -108,7 +154,14 @@
     <string>&amp;Save</string>
    </property>
   </action>
+  <action name="actionAbout">
+   <property name="text">
+    <string>About</string>
+   </property>
+  </action>
  </widget>
- <resources/>
+ <resources>
+  <include location="../resources/scanmylan_resources.qrc"/>
+ </resources>
  <connections/>
 </ui>
